<resources>
    <string name="app_name">PostIT</string>
    <string name="welcome_to_postit">Welcome to PostIT</string>

    <string name="next">Next</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_in">Sign in to continue</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember me</string>
    <string name="serperated">|</string>
    <string name="new_user">New User ?</string>
    <string name="register_here">Register Here</string>
    <string name="hello_there_register_here">Hello there, Register here !</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_butt">Sign In</string>
    <string name="login_here">Login here</string>
    <string name="already_registered">Already registered?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="name">Name</string>
    <string name="glad_you_joined_us_choose_ac_profile_picture_and_you_ll_done">Glad you joined us, choose a profile picture and you\'ll done</string>
    <string name="welcome_few_clicks_away">Welcome, few clicks away</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="action_logout">Log Out</string>
    <string name="action_Account">My Account</string>
    <string name="edit_profile_text">Edit Your Profile here</string>
    <string name="think_change">Thinking about some changes, this is the right place</string>
    <string name="update_data">Update Settings</string>
    <string name="title_post">Title</string>
    <string name="desPost">Description</string>
    <string name="postButtonText">PostIT</string>
    <string name="textview">TextView</string>
</resources>