<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">



    <TextView
        android:id="@+id/maintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there_welcome_back"
        android:textSize="24sp"
        android:textColor="@color/colorTex"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/wsr"/>


    <TextView
        android:id="@+id/secondtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_gravity="start"
        android:textColor="@color/colorTex"
        android:textSize="16sp"
        android:fontFamily="@font/wsr"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/loginPanel">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="@color/colorTex"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/colorPrimary"
            android:textColorHint="@color/colorTex"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button

            android:id="@+id/forgotPasswordback"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/colorTex"
            android:fontFamily="@font/wsr"
            android:visibility="invisible"
            android:text="@string/back"/>

            <Button
                android:layout_marginStart="135dp"
                android:id="@+id/forgotPassword"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/wsr"
                android:text="@string/forget_password"
                android:textColor="@color/colorTex" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_butt"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBack"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/wsr"
        android:background="@drawable/circle_button"
        android:id="@+id/signInButton"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="@color/colorTex"
            android:textSize="16sp"
            android:id="@+id/newUsertext"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textSize="15sp"
            android:onClick="signUpintent"
            android:textColor="@color/colorTex"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/signUpButton"/>

    </LinearLayout>

   <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/google_back"
        android:drawableStart="@drawable/google_logo"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in_with_google"
        android:fontFamily="@font/wsr"
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/gSignInButton"
        android:drawablePadding="10dp"/>

</LinearLayout>