<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:paddingTop="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_few_clicks_away"
        android:textSize="24sp"
        android:textColor="@color/colorTex"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/wsr"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glad_you_joined_us_choose_ac_profile_picture_and_you_ll_done"
        android:textSize="15sp"
        android:textColor="@color/colorTex"
        android:layout_gravity="start"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/wsr"/>


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:src="@drawable/ab"
        android:onClick="onClickImage"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_marginTop="30dp"
        android:hint="@string/name"
        app:boxStrokeColor="@color/colorPrimary"
        android:textColorHint="@color/colorTex"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintVertical_bias="0.0" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBack"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/wsr"
        android:background="@drawable/circle_button"
        android:id="@+id/nextProfile"
        android:onClick="onClick"/>

</LinearLayout>